En atención del Ticket 032304

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderListaEspeciesMP.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderListaEspeciesMP.cshtml
@@ -111,7 +111,7 @@
         }
         else
         {
-            <h1>Seleccionar expediente o informe</h1>
+            <h4 style="color: red;">Seleccionar expediente o informe</h4>
         }
     </div>
     <div class="col-md-12">
