En atención al ticket

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderMedPrecautoria.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderMedPrecautoria.cshtml
@@ -8,6 +8,16 @@
 
         if (_renderMedPrecautoria.frm.find("#chkMedCautelar").is(':checked')) {
             _renderMedPrecautoria.frm.find("#divMedPrecuatoria").show();
+        } else {
+            _renderMedPrecautoria.frm.find("#chkDecomiso").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkPlanCierre").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkDisposicionFauna").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkParalizacion").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkClausuraTemporal").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkClausuraDefinitiva").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkInhabilitacionTemporal").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkInhabilitacionDefinitiva").prop('checked', false);
+            _renderMedPrecautoria.frm.find("#chkInmovilizacion").prop('checked', false);
         }
 
         if (_renderMedPrecautoria.frm.find("#chkMedEspecieMP").is(':checked')) {
@@ -22,7 +32,7 @@
 </script>
 
 <div id="fmrMedPrecuatoria">
-    <div class="card-header text-small"> Medidas Complementarias y Seguimiento (Precautorias)<br /></div>
+    <div class="card-header text-small"> Medidas Complementarias y Seguimiento<br /></div>
     <div class="form-row">
         <div class="form-group col-md-4">
             <label for="chkMedCautelar" class="text-small">¿Requiere implementar medidas?</label>
@@ -39,7 +49,7 @@
         </div>
     </div>
     <div id="divMedPrecuatoria" style="display:none;">
-        <div class="form-row">
+        <div class="form-row" style="display: none;">
             <div class="form-group col-md-4">
             </div>
             <div class="form-group col-md-4">
@@ -49,7 +59,7 @@
                 @Html.CheckBoxFor(m => m.chkGTFMP, new { @class = "form-check-input", style = "width:15px;height:16px;" })
             </div>
         </div>
-        <div class="form-row">
+        <div class="form-row" style="display: none;">
             <div class="form-group col-md-4">
             </div>
             <div class="form-group col-md-4">
@@ -59,7 +69,7 @@
                 @Html.CheckBoxFor(m => m.chkMedLisTrozasMP, new { @class = "form-check-input", style = "width:15px;height:16px;" })
             </div>
         </div>
-        <div class="form-row">
+        <div class="form-row" style="display: none;">
             <div class="form-group col-md-4">
             </div>
             <div class="form-group col-md-4">
@@ -112,10 +122,70 @@
                 @Html.CheckBoxFor(m => m.chkDisposicionFauna, new { @class = "form-check-input", style = "width:15px;height:16px;" })
             </div>
         </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkParalizacion" class="text-small">Paralización de la actividad</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkParalizacion, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkClausuraTemporal" class="text-small">Clausura temporal</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkClausuraTemporal, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkClausuraDefinitiva" class="text-small">Clausura definitiva</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkClausuraDefinitiva, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkInhabilitacionTemporal" class="text-small">Inhabilitación temporal</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkInhabilitacionTemporal, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkInhabilitacionDefinitiva" class="text-small">Inhabilitación definitiva</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkInhabilitacionDefinitiva, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="chkInmovilizacion" class="text-small">Inmovilización de bienes</label>
+            </div>
+            <div class="form-group col-md-4">
+                @Html.CheckBoxFor(m => m.chkInmovilizacion, new { @class = "form-check-input", style = "width:15px;height:16px;" })
+            </div>
+        </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-4">
-            <label for="txtDescMedidaCautelar" class="text-small"> Descripción de Medidas Complementarias</label>
+            <label for="txtDescMedidaCautelar" class="text-small"> Descripción de medidas complementarias</label>
         </div>
         <div class="form-group col-md-6">
             @Html.TextAreaFor(m => m.txtDescMedidaCautelar, 4, 1, new { @class = "form-control form-control-sm" })
