--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_AreaExSitu.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_AreaExSitu.cshtml
@@ -37,6 +37,16 @@
                     </div>
                 </div>
                 <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <label for="txtLargo" class="text-small">Coordenada Este</label>
+                        @Html.TextBox("txtCoordenadaEste", "", new { @class = "form-control form-control-sm", maxlength = "15", onkeypress = "return utilSigo.checkNum(event)" })
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="txtAncho" class="text-small">Coordenada Norte</label>
+                        @Html.TextBox("txtCoordenadaNorte", "", new { @class = "form-control form-control-sm", maxlength = "15", onkeypress = "return utilSigo.checkNum(event)" })
+                    </div>                    
+                </div>
+                <div class="form-row">
                     <div class="table-responsive" style="overflow-x:hidden;">
                         <table id="tbItemAreaExSitu_Material" style="width:100%" class="table table-hover table-bordered">
                             <thead>
