--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
@@ -1557,7 +1557,7 @@
                                     <div class="form-row">
                                         @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderObligacionTitular.cshtml", Model.tbObligacionTitular)
                                     </div>
-                                    <div>
+                                    <div class="">
                                         @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderObligacionMandatos.cshtml", Model.tbObligMandatos)
                                     </div>
                                 </div>
