--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeTara/AddEditTara.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeTara/AddEditTara.cshtml
@@ -221,6 +221,9 @@
                                     <div class="card-header text-small"></div><br />
                                     @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderObligacionTitular.cshtml", Model.tbObligTitular)
                                 </div>
+                                <div class="">
+                                    @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderObligacionMandatos.cshtml", Model.tbObligMandatos)
+                                </div>
                             </div>
                             <div class="tab-pane fade show" id="navResultado" role="tabpanel" aria-labelledby="nav-home-tab">
                                 <div class="card">
@@ -640,4 +643,5 @@
     <div class="modal fade hide" id="mdlBuscarPersona" role="dialog"></div>
     <div class="modal fade" id="modalAddEditPersona" tabindex="-1" role="dialog"></div>
     <div class="modal fade hide" id="personaUbigeoModal" role="dialog"></div>
+    <div class="modal fade hide" id="mdlBuscarObligacionMandatos" role="dialog"></div>
 </div>
