--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_shared/_Mandatos.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_shared/_Mandatos.cshtml
@@ -145,7 +145,7 @@
                 <label class="text-small">Plazo de implementación</label>
             </div>
             <div class="form-group col-md-2">
-                <label for="txtImplMCDias" class="text-small">Días:</label>
+                <label for="txtImplMCDias" class="text-small">Días Calendarios</label>
                 <input class="form-control form-control-sm" id="txtDiasImpl" maxlength="10" name="txtDiasImpl" onkeypress="return isNumberKey(event)" type="text" value="">
             </div>
         </div>
