--- a/SIGOFCv3/Areas/General/Views/ManCalculoMulta/ManIndPreCon.cshtml
+++ b/SIGOFCv3/Areas/General/Views/ManCalculoMulta/ManIndPreCon.cshtml
@@ -25,6 +25,7 @@
                         <div class="form-group col-md-3">
                             <select class="form-control form-control-sm" id="cboDescripcion">
                                 <option value="0">Todos</option>
+                                <option value="2023">2023</option>
                                 <option value="2022">2022</option>
                                 <option value="2021">2021</option>
                                 <option value="2020">2020</option>
@@ -100,6 +101,7 @@
                         <div class="form-group col-md-4">
                             <label for="cboTipo">Año</label>
                             <select class="form-control form-control-sm" id="cboAnio">
+                                <option value="2023">2023</option>
                                 <option value="2022">2022</option>
                                 <option value="2021">2021</option>
                                 <option value="2020">2020</option>
